Rename scalebox regions API
